# neo-extensions

./: BUILD.bazel  CLEANUP-PLAN.md  README.md  README.org
.github/workflows/: build_extensions.yml
dotgithub/workflows/: build_extensions.yml
extensions/neo/ai/: ai.el  manifest.el  manisfest.el
extensions/neo/ai-buddy/: manifest.el  neo-ai-buddy-claude.el  neo-ai-buddy-codex.el  neo-ai-buddy-gemini.el  neo-ai-buddy.el
extensions/neo/better-git/: manifest.el  neo-better-git-brancher.el  neo-better-git.el
extensions/neo/c++/: c++.el  manifest.el
extensions/neo/compsel/: compsel.el  manifest.el  neo-compsel.el
extensions/neo/dashboard/: manifest.el  neo-dashboard.el
extensions/neo/elisp/: elisp.el  manifest.el  neo-elisp.el
extensions/neo/extension-manager/: manifest.el  neo-extension-manager-navigation.el  neo-extension-manager-render.el  neo-extension-manager.el  neo-extension-manager.elc
extensions/neo/full-monty/: manifest.el  neo-full-monty.el
extensions/neo/gnus/: manifest.el
extensions/neo/hacking/: hacking.el  manifest.el
extensions/neo/haskell/: manifest.el  neo-haskell.el
extensions/neo/latex/: manifest.el  neo-latex.el
extensions/neo/leetcode/: manifest.el  neo-leetcode.el
extensions/neo/lsp/: lsp.el  manifest.el
extensions/neo/mlody/: manifest.el  mlody.el  neo-mlody-mode.el  neo-mlody-shell.el  neo-mlody-starlark-mode.el  neo-mlody.el
extensions/neo/mlody-mode/: manifest.el  neo-mlody-mode-core.el  neo-mlody-mode.el
extensions/neo/news/: manifest.el  (+2 more)
scripts/: o-neo-create-extension
templates/extension/: copier.yaml
(+138 files in other folders)
