load("//build/copybara:copybara.bzl", "copybara_workflow")

copybara_workflow(
    name = "neo-extensions",
    includes = [
        "devex/editors/emacs/extensions/**",
    ],
    excludes = [
        "devex/editors/emacs/extensions/BUILD.bazel",
        "devex/editors/emacs/extensions/mav/**",
    ],
    moves = {
        "devex/editors/emacs/extensions": "",
    },
)

copybara_workflow(
    name = "mav-extensions",
    includes = [
        "devex/editors/emacs/extensions/**",
    ],
    excludes = [
        "devex/editors/emacs/extensions/BUILD.bazel",
        "devex/editors/emacs/extensions/neo/**",
    ],
    moves = {
        "devex/editors/emacs/extensions": "",
    },
)
